Fix spacing issue in list of checkboxes and radio inputs

--- a/form-project/styles.css
+++ b/form-project/styles.css
@@ -38,19 +38,28 @@ body {
   
   label {
     display: block;
-    margin: 0.5rem auto;
+    margin: 0 auto 1rem auto;
+  }
+
+  label:last-of-type {
+    margin: 0 auto;
+  }
+
+  .list {
+    margin: 0 0 0.5rem 0;
   }
   
   input, textarea, select {
-    margin: 10px 0 0 0;
+    margin: 5px 0 0 0;
     width: 100%;
     min-height: 2em;
     background-color: #f1f1f1;
+    box-sizing: border-box;
   }
   
   .inline {
     width: unset;
-    margin: -3px 0.5em 0 0;
+    margin: -3.5px 0.5em 0 0;
     vertical-align: middle;
   }
   
@@ -60,8 +69,9 @@ body {
     font-size: 1.1em;
     background-color: #2ee674;
     border: none;
+    margin: 0;
   }
   
   .question {
-    margin: 0;
+    margin: 0 0 0.3rem 0;
   }
